--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://NitinGhodki.github.io/welcome",
+  "homepage": "https://NitinGhodki.github.io/RailwayReservationSystemByNitin/welcome",
   "name": "railwayreservation",
   "version": "0.1.0",
   "private": true,
